--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div class="tools">
             <label for="colorpicker">Color Picker</label>
             <input type="color" id="colorpicker" value="#0000ff">
-            <button>Color Mode</button>
-            <button>Rainbow Mode</button>
-            <button>Eraser</button>
-            <button>Clear</button>  
+            <button>Color selected</button>
+            <button id="Random">Random Mode</button>
+            <button id="eraser">Eraser</button>
+            <button id="clear">Clear</button>  
             <div class="slidecontainer">
-            <input type="range" min="1" max="100" value="16" class="slider">
+            <input type="range" min="1" max="64" value="16" class="slider">
             <p id="sliderOutput">Size: 16x16</p>   
            </div>
         </div>
