--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <main>
         <div class="tools">
             <label for="colorpicker">Color Picker</label>
-            <input type="color" id="colorpicker" value="#0000ff">
-            <button>Color selected</button>
+            <input type="color" id="colorpicker" value="#000000" style="color: rgb(0,0,0)">
             <button id="Random">Random Mode</button>
             <button id="eraser">Eraser</button>
             <button id="clear">Clear</button>  
