Changed buttons to be toggled when clicked

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="tools">
             <label for="colorpicker">Color Picker</label>
             <input type="color" id="colorpicker" value="#000000" style="color: rgb(0,0,0)">
+            <button id="colorMode">Color Mode</button>
             <button id="randomMode">Random Mode</button>
             <button id="eraser">Eraser</button>
             <button id="clear">Clear</button>  
