--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <main>
         <div class="tools">
             <label for="colorpicker">Color Picker</label>
-            <input type="color" id="colorpicker" value="#000000" style="color: rgb(0,0,0)">
-            <button id="colorMode">Color Mode</button>
-            <button id="randomMode">Random Mode</button>
-            <button id="eraser">Eraser</button>
-            <button id="clear">Clear</button>  
+            <input type="color" id="colorpicker" value="#000000" style="color: rgb(0,0,0)" class="grow-on-hover">
+            <button id="colorMode" class="grow-on-hover">Color Mode</button>
+            <button id="randomMode" class="grow-on-hover">Random Mode</button>
+            <button id="eraser" class="grow-on-hover">Eraser</button>
+            <button id="clear" class="grow-on-hover">Clear</button>  
             <div class="slidecontainer">
             <input type="range" min="1" max="64" value="16" class="slider">
             <p id="sliderOutput">Size: 16x16</p>   
